examples/test/testpolicy11744.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11744
  namespace: namespace376
spec:
  podSelector:
    matchLabels:
      key1: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value7
      podSelector:
        matchLabels:
          key36: value10
          key38: value38
          key26: value23
